<resources>
    <string name="app_name">Submission4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_movie">MOVIES</string>
    <string name="label_tvshow">TV SHOWS</string>
    <string name="label_fav_movie">Favorite Movie</string>
    <string name="label_fav_tvshow">Favorite TV Show</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="language">Language</string>
    <string name="release_date">release date</string>
    <string name="rating">Rating</string>
    <string name="dialog_message_delete">Are you sure you want to delete this item?</string>
    <string name="dialog_title_delete">Delete item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Item deleted</string>
    <string name="description">Description</string>
    <string name="added_to_favorite">added to favorite</string>
    <string name="no_data">No data yet</string>

</resources>
