<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/movieFragment"
            android:icon="@drawable/baseline_movies_black"
            android:title="@string/movies" />
        <item
            android:id="@+id/TVShowFragment"
            android:icon="@drawable/baseline_tv_black"
            android:title="@string/tv_shows" />

    </group>

    <item android:title="@string/favorite">
        <menu>
            <item
                android:id="@+id/favMoviesFragment"
                android:title="@string/favorite_movie" />
            <item
                android:id="@+id/favTVShowFragment"
                android:title="@string/favorite_tv_show" />

        </menu>
    </item>

</menu>
